Add URL parser that does not use Context